[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/components/SequenceComponent.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/DebugLight.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/components/BaseComponent.tscn" type="PackedScene" id=4]

[node name="SequenceComponent" instance=ExtResource( 4 )]
script = ExtResource( 1 )

[node name="Light4" parent="." index="1" instance=ExtResource( 2 )]

[node name="Light3" parent="." index="2" instance=ExtResource( 2 )]
position = Vector2( 40, 0 )

[node name="Light2" parent="." index="3" instance=ExtResource( 2 )]
position = Vector2( 80, 0 )

[node name="Light1" parent="." index="4" instance=ExtResource( 2 )]
position = Vector2( 120, 0 )
